
	package hbase.pb;
	
	option java_package = "org.apache.hadoop.hbase.protobuf.generated";
	option java_outer_classname = "GsFilterProtos";
	option java_generic_services = true;
	option java_generate_equals_and_hash = true;
	option optimize_for = SPEED;
	
	
	message FilterRowByLongAtAGivenOffset {
	  required uint64 longOffset = 1;
	  required uint64 firstLong = 2;
	  required uint64 lastLong = 3 ;
	}


